gcc/testsuite/gfortran.dg/bind_c_usage_17_c.c
@@ -1,0 +1,4 @@
+/* PR fortran/37201.
+   Linked with bind_c_usage_17.f90.  */
+
+char cdir(void){return '/';}
